# kairos

./: .gitignore  AGENTS.md  CLAUDE.md  Context.md  README.md  mise.toml  settings.gradle.kts  skills-lock.json
.claude/: README.md  settings.json
.claude/agents/: compose-reviewer.md
.claude/scripts/: validate-setup.sh
.factory/: memories.md  settings.json
.factory/hooks/: format.sh  session-start.sh  validate.sh
.factory/rules/: domain.md  embedded-c.md  kotlin.md  svelte.md
.github/workflows/: ci.yml  code-quality.yml
app/: build.gradle.kts
docs/: 06-invariants.md  07-system-architecture.md  10-user-flows.md  14-hardware-wiring-appendix.md  15-kiosk-deployment-spec.md  16-kiosk-app-structure.md  18-jsonl-serial-protocol.md  19-mvp-scope.md  20-contract-type-generation.md  21-architecture-decision-web-android-pi.md  22-shared-core-boundaries.md  front-door-kiosk-architecture-update.md  implementation-plan.md  kairos_mvp_feature_set.md
docs/design/: 00-project-overview.md  04-prd-sync.md  05-domain-model.md  07-architecture.md  08-erd.md  09-state-machines.md  14-shared-habits.md  (+2 more)
firmware/: AGENTS.md
firmware/presence-esp32/main/: CMakeLists.txt  jsonl_input.c  jsonl_input.h  jsonl_output.c  jsonl_output.h  mmwave_sensor.c  mmwave_sensor.h  presence_debounce.c  presence_debounce.h  presence_main.c  sensor_config.c  sensor_config.h
gradle/: libs.versions.toml
kotlin/: .editorconfig  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
shared/: build.gradle.kts
wear/: build.gradle.kts
web/: AGENTS.md  README.md  package.json
(+78 files in other folders)
